# Adagio

./: Adagio.cabal  LICENSE  README.md  stack.yaml
app/: AppServer.hs  ClientUI.hs  Main.hs  Node.hs  Spec.hs  Telnet.hs  Txn.hs
old/: Main_old1.hs  Main_old2.hs
resources/: Flush_broadcast  txn.txt
src/: AppServer.hs  Client.hs  Database.hs  KVStore.hs  Txn.hs  Utils.hs  Worker.hs
test/: Spec.hs
