name:                Adagio
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/weihu816/Adagio#readme
license:             BSD3
license-file:        LICENSE
author:              Wei Hu
maintainer:          weihu816@gmail.com
copyright:           Wei Hu
category:            web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Adagio-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Adagio
  default-language:    Haskell2010

test-suite Adagio-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Adagio
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/weihu816/Adagio
