name:                Adagio
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/weihu816/Adagio#readme
license:             BSD3
license-file:        LICENSE
author:              Wei Hu
maintainer:          weihu816@gmail.com
copyright:           Wei Hu, Yisi Xu
category:            web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     KVStore, Worker, Utils, Txn, AppServer
  build-depends:       base >= 4.7 && < 5
                       , stm == 2.4.*
                       , containers
                       , network
                       , network-uri
                       , async == 2.*
                       , binary >=0.6.3 && <= 0.9
                       , template-haskell
                       , transformers
                       , distributed-process
                       , distributed-process-simplelocalnet == 0.2.*
                       , distributed-static >= 0.2 && < 0.4
                       , uuid
                       , network-transport-tcp
                       , split
  default-language:    Haskell2010

executable node
  hs-source-dirs:      app
  main-is:             Node.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Adagio
                     , stm == 2.4.*
                     , containers
                     , network
                     , network-uri
                     , async == 2.*
                     , binary >=0.6.3 && <= 0.9
                     , template-haskell
                     , transformers
                     , distributed-process == 0.6.*
                     , distributed-process-simplelocalnet == 0.2.*
                     , distributed-static >= 0.2 && < 0.4
  default-language:    Haskell2010

executable clientui
  hs-source-dirs:      app
  main-is:             ClientUI.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Adagio
                     , brick
                     , lens
                     , socket
                     , microlens
                     , microlens-th
                     , vty
                     , text-zipper
                     , bytestring
                     , time
                     , split
  default-language:    Haskell2010

test-suite txt
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Adagio
                     , stm == 2.4.*
                     , containers
                     , network
                     , network-uri
                     , async == 2.*
                     , binary >=0.6.3 && <= 0.9
                     , template-haskell
                     , transformers
                     , distributed-process == 0.6.*
                     , distributed-process-simplelocalnet == 0.2.*
                     , distributed-static >= 0.2 && < 0.4
                     , network-transport-tcp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/weihu816/Adagio
